<?xml version="1.0"?>
<package>
  <name>tclap</name>
  <version>0.0.0</version>
  <description>A fixed version of tclap with catkin capabilities</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="missing@missing.com">cf Authors</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
